# pare-frida-mcp

./: .gitignore  Makefile  README.md  pr_summary.txt  pyproject.toml
docs/superpowers/: tool-output-policy.md
docs/superpowers/plans/: 2026-05-28-pare-frida-mcp-android-v1.md  2026-05-31-device-enumeration-tools.md  2026-05-31-sessionless-snapshot-store.md  2026-06-01-enumeration-snapshot-consumer.md  2026-06-02-search-capture-valid-lean-sample.md  2026-06-07-readonly-risk-retier.md  2026-06-07-snapshot-viewer.md  2026-06-17-enumerate-modules-snapshots.md  (+2 more)
src/pare_frida_mcp/: agent_bundle.py  bounding.py  config.py  contract.py  ids.py  server.py  tools.py
tests/device/: conftest.py  test_android_flows.py
tests/integration/: test_conformance.py  test_server_list_tools.py  test_stdio_handshake.py  test_wire_risk_tier.py
tests/unit/: conftest.py  test_active_session.py  test_attach_by_name.py  test_attach_dedupe.py  test_bounding.py  test_capture_read.py  test_capture_search.py  test_capture_store.py  test_config.py  test_contract.py  test_device_enum.py  test_enumerate_snapshots.py  test_execute_script_honest.py  test_ids.py  test_java_hook_overload.py  test_java_introspection.py  test_no_capture_imports.py  test_ok_floor_data_loss.py  test_page.py  test_read_events.py  test_read_hook_events.py  test_read_memory_full.py  test_results_to_snapshots.py  test_sessions_pump.py  test_snapshot_routing.py  test_snapshots.py  test_tools_enum.py  test_tools_envelope.py  test_tools_page.py  test_tools_search.py  test_tools_sessions.py  test_uncapped.py
(+24 files in other folders)
